# ChatP2P

./: .gitignore  COMMERCIAL-LICENSE.md  LICENSE  NOTICE.md  README.md  pyproject.toml
docs/: ALPHA_RUNBOOK.md  OPERATOR_RELIABILITY.md  PRODUCT_BLUEPRINT.md  PROVIDER_EDGE_MODE.md
scripts/: install_gremlinchat_windows.ps1  operator-maintenance.ps1
src/chatp2p/: __init__.py  alpha.py  benchmark.py  canonical.py  chat_demo.py  chat_gateway.py  chat_repl.py  chat_request.py  chat_session.py  chat_smoke.py  cli.py  client.py  coordinator.py  crypto.py  doctor.py  gremlinchat_cli.py  (+36 more)
tests/: test_alpha_join.py  test_benchmark.py  test_chat_demo.py  test_chat_gateway.py  test_chat_repl.py  test_chat_request.py  test_chat_session.py  test_chat_smoke.py  test_credit_ledger.py  test_gremlinchat_approvals_reports.py  test_gremlinchat_pairing.py  test_gremlinchat_relay.py  test_gremlinchat_runbooks.py  test_gremlinchat_task_flow.py  test_http_network.py  test_model_artifact.py  test_model_candidate.py  test_model_candidate_pack.py  test_model_eval.py  test_model_governance.py  test_model_registry.py  test_model_release.py  test_model_release_bundle.py  test_model_release_sequence.py  test_model_release_status.py  test_model_route_plan.py  test_model_runtime.py  test_model_shortlist.py  test_node_doctor.py  test_node_runtime.py  test_ollama_inference.py  test_operator_actions.py  test_operator_autopull.py  test_operator_console.py  test_operator_credits.py  test_operator_daily.py  test_operator_release.py  test_operator_self_heal.py  test_operator_sync.py  test_persistence.py  (+8 more)
(+12 files in other folders)
